--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,31 +2,43 @@
 
 html,
 body {
-  margin: 0;
-  font-family: 'Inter', sans-serif;
-   /* background: linear-gradient(125deg, rgba(166, 164, 248,1), rgba(255,255,255,0)); */
-  /* background: linear-gradient(to top, #a18cd1 0%, #fbc2eb 100%); */
-  /* background-image: linear-gradient(120deg, #a6c0fe 0%, #f68084 100%); */
-  /* background-image: linear-gradient(135deg, #667eea 0%, #764ba2 100%); */
-  /* background-image: linear-gradient(to top, #7028e4 0%, #e5b2ca 100%); */
-  /* background-image: linear-gradient(to right, #ec77ab 0%, #7873f5 100%); */
-  /* background-image: url("/wallpaper.jpg"); */
-  background: white;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
+	margin: 0;
+	font-family: 'Inter', sans-serif;
+	/* background: linear-gradient(125deg, rgba(166, 164, 248,1), rgba(255,255,255,0)); */
+	/* background: linear-gradient(to top, #a18cd1 0%, #fbc2eb 100%); */
+	/* background-image: linear-gradient(120deg, #a6c0fe 0%, #f68084 100%); */
+	/* background-image: linear-gradient(135deg, #667eea 0%, #764ba2 100%); */
+	/* background-image: linear-gradient(to top, #7028e4 0%, #e5b2ca 100%); */
+	/* background-image: linear-gradient(to right, #ec77ab 0%, #7873f5 100%); */
+	/* background-image: url("/wallpaper.jpg"); */
+	background: white;
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: center;
 }
 
-
-p, h1, h2, span {
-  color: black;
+p,
+h1,
+h2,
+span {
+	color: black;
 }
 
 a {
-  color: inherit;
-  text-decoration: none;
+	color: inherit;
+	text-decoration: none;
 }
 
 * {
-  box-sizing: border-box;
+	box-sizing: border-box;
+}
+
+.chat-room::-webkit-scrollbar,
+.chat-panel::-webkit-scrollbar {
+	display: none;
+}
+
+#chat-message,
+#chat-message:focus {
+	color: white;
 }
